--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,9 +2,9 @@
 <resources>
 
     <string name="wait_message">読み込み中</string>
-    <string name="app_name">ハローワーク求人検索</string>
-    <string name="app_screen_name">求人検索</string>
+    <string name="app_name">Find My IP address</string><!-- App's full name -->
+    <string name="app_screen_name">My IP</string><!-- App's name on launcher -->
     <string name="app_home_l">http://192.168.51.1/Dropbox/workdir/Android/workspace/hw/assets/</string>
-    <string name="app_publisher_id">a14f2a8f4f1aa29</string>
+    <string name="app_publisher_id">a14f2a8f4f1aa29</string><!-- admob publisher id -->
 
 </resources>
